[gd_scene load_steps=7 format=2]

[ext_resource path="res://ItemTileset.tres" type="TileSet" id=1]
[ext_resource path="res://gfx/icons.png" type="Texture" id=2]
[ext_resource path="res://CuteFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Inventory.gd" type="Script" id=4]
[ext_resource path="res://DraggedItem.gd" type="Script" id=5]
[ext_resource path="res://BackgroundTileset.tres" type="TileSet" id=6]

[node name="Inventory" type="CanvasLayer"]
script = ExtResource( 4 )
chest_tile = 21
shop_tile = 10
bin_tile = 11

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TileMap" parent="Control"]
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 188, 188 )
format = 1
tile_data = PoolIntArray( 196609, 0, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 2, 0, 262145, 3, 0, 262146, 22, 0, 262147, 21, 0, 262148, 21, 0, 262149, 21, 0, 262150, 21, 0, 262151, 4, 0, 262152, 4, 0, 262153, 5, 0, 327681, 3, 0, 327682, 21, 0, 327683, 21, 0, 327684, 21, 0, 327685, 21, 0, 327686, 21, 0, 327687, 4, 0, 327688, 4, 0, 327689, 5, 0, 393217, 6, 0, 393218, 7, 0, 393219, 7, 0, 393220, 7, 0, 393221, 7, 0, 393222, 7, 0, 393223, 7, 0, 393224, 7, 0, 393225, 8, 0 )

[node name="Items" type="TileMap" parent="Control"]
position = Vector2( 4.88281, 19.3461 )
scale = Vector2( 0.64, 0.64 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 140, 140 )
format = 1

[node name="DraggedItem" type="Sprite" parent="Control"]
visible = false
position = Vector2( 228.192, 320.392 )
texture = ExtResource( 2 )
vframes = 11
hframes = 11
script = ExtResource( 5 )

[node name="MoneyLabel" type="Label" parent="Control"]
margin_left = 654.064
margin_top = 268.761
margin_right = 750.064
margin_bottom = 302.761
custom_fonts/font = ExtResource( 3 )
text = "$$$"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalLabel" type="Label" parent="Control"]
margin_left = 762.186
margin_top = 255.413
margin_right = 858.186
margin_bottom = 289.413
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.992157, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyLogo" type="Sprite" parent="Control"]
